# marqo-instantapi

./: .buildinfo  README.md  example.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  test.json
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: deploy_docs.yaml  publish.yaml  test.yaml
_modules/: index.html
_modules/marqo_instantapi/: instant_api_client.html  marqo_instantapi_adapter.html
_sources/: index.rst.txt
docs/source/: conf.py  modules.rst
src/marqo_instantapi/: __init__.py  instant_api_client.py  marqo_instantapi_adapter.py
tests/: conftest.py  test_domain_check.py  test_integration.py  test_mappings.py  test_marqo_integration.py  test_schema_checking.py
